--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "google-map-react": "^2.2.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -22,6 +23,7 @@
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@types/google-map-react": "^2.1.10",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
